[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smbls"
dynamic = ["version"]
description = "list SMB shares"
readme = "README.md"
urls = {Repository = "https://github.com/CarveSystems/smbls"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = ["impacket"]
[project.scripts]
smbls = "smbls:smbls"
smblsreport = "smbls:report"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "smbls/version.py"
