[metadata]
name = smbls
version = 1.1.1
description = list SMB shares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CarveSystems/smbls
license = MIT

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9


[options]
packages = smbls
install_requires =
    impacket
python_requires = >=3.9

[options.entry_points]
console_scripts =
    smbls = smbls:main
